built jar with mvn clean and mvn install